--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -155,10 +155,12 @@
                         android:textColor="@android:color/white"
                         android:gravity="center"
                         android:id="@+id/tvPlay"
-                        android:background="@drawable/button_detail_desc"
+                        android:background="@drawable/button_detail_play"
                         android:focusable="true"
                         android:layout_width="@dimen/vs_120"
                         android:layout_height="@dimen/vs_40"
+						android:layout_marginLeft="@dimen/vs_10"
+						android:layout_marginStart="@dimen/vs_10"
                         android:layout_marginRight="@dimen/vs_10"
                         android:text="立即播放"
                         android:layout_marginEnd="@dimen/vs_10"/>
@@ -167,7 +169,7 @@
                         android:textColor="@android:color/white"
                         android:gravity="center"
                         android:id="@+id/tvQuickSearch"
-                        android:background="@drawable/button_detail_desc"
+                        android:background="@drawable/button_detail_quick_search"
                         android:focusable="true"
                         android:layout_width="@dimen/vs_120"
                         android:layout_height="@dimen/vs_40"
@@ -179,7 +181,7 @@
                         android:textColor="@android:color/white"
                         android:gravity="center"
                         android:id="@+id/tvSort"
-                        android:background="@drawable/button_detail_desc"
+                        android:background="@drawable/button_detail_sort"
                         android:focusable="true"
                         android:layout_width="@dimen/vs_120"
                         android:layout_height="@dimen/vs_40"
@@ -191,7 +193,7 @@
                         android:textColor="@android:color/white"
                         android:gravity="center"
                         android:id="@+id/tvCollect"
-                        android:background="@drawable/button_detail_desc"
+                        android:background="@drawable/button_detail_collect"
                         android:focusable="true"
                         android:layout_width="@dimen/vs_120"
                         android:layout_height="@dimen/vs_40"
