--- a/app/src/main/res/drawable/shape_user_focus_1.xml
+++ b/app/src/main/res/drawable/shape_user_focus_1.xml
@@ -10,7 +10,7 @@
                 android:width="2.0mm"
                 android:color="@color/color_FFFFFF" />
             <solid
-                android:color="@color/color_3D3D3D" />
+                android:color="@color/color_6C3D3D3D" />
         </shape>
     </item>
     <item
@@ -19,7 +19,7 @@
             <corners
                 android:radius="7.0mm" />
             <solid
-                android:color="@color/color_3D3D3D" />
+                android:color="@color/color_6C3D3D3D" />
         </shape>
     </item>
 </selector>
