--- a/app/src/main/res/layout/dialog_desc.xml
+++ b/app/src/main/res/layout/dialog_desc.xml
@@ -5,14 +5,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.core.widget.NestedScrollView
-        android:background="@drawable/shape_dialog_bg_xuameng"
+        android:background="@drawable/shape_dialog_bg_main"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
         xmlns:android="http://schemas.android.com/apk/res/android">
         <TextView
             android:textSize="@dimen/ts_26"
-            android:textColor="@color/color_FFFFFF"
+            android:textColor="@color/color_85000000"
             android:id="@+id/describe"
             android:padding="@dimen/vs_20"
             android:layout_width="fill_parent"
