--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,1 +1,307 @@
-1
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/llLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:id="@+id/topLayout"
+            android:paddingLeft="@dimen/vs_40"
+            android:paddingRight="@dimen/vs_50"
+            android:paddingBottom="@dimen/vs_10"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/vs_10">
+            <ImageView
+                android:id="@+id/ivThumb"
+                android:layout_width="@dimen/vs_240"
+                android:layout_height="313.0mm"
+                android:layout_marginLeft="11.0mm"
+                android:layout_marginTop="@dimen/vs_7"
+                android:scaleType="fitXY"/>
+            <View
+                android:id="@+id/previewPlayerPlace"
+                android:visibility="gone"
+                android:layout_width="@dimen/vs_480"
+                android:layout_height="@dimen/vs_320"/>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/vs_320"
+                android:layout_marginLeft="@dimen/vs_20"
+                android:layout_marginStart="@dimen/vs_20">
+                <TextView
+                    android:textSize="@dimen/ts_28"
+                    android:textColor="@android:color/white"
+                    android:ellipsize="end"
+                    android:id="@+id/tvName"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/vs_5"
+                    android:maxLines="1"
+                    android:singleLine="true"/>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/vs_5">
+                    <TextView
+                        android:textSize="@dimen/ts_20"
+                        android:textColor="@color/color_CCFFFFFF"
+                        android:ellipsize="end"
+                        android:id="@+id/tvSite"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/vs_10"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:layout_marginEnd="@dimen/vs_10"/>
+                    <TextView
+                        android:textSize="@dimen/ts_20"
+                        android:textColor="@color/color_CCFFFFFF"
+                        android:ellipsize="end"
+                        android:id="@+id/tvYear"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/vs_10"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:layout_marginEnd="@dimen/vs_10"/>
+                    <TextView
+                        android:textSize="@dimen/ts_20"
+                        android:textColor="@color/color_CCFFFFFF"
+                        android:ellipsize="end"
+                        android:id="@+id/tvArea"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/vs_10"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:layout_marginEnd="@dimen/vs_10"/>
+                    <TextView
+                        android:textSize="@dimen/ts_20"
+                        android:textColor="@color/color_CCFFFFFF"
+                        android:ellipsize="end"
+                        android:id="@+id/tvLang"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/vs_10"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:layout_marginEnd="@dimen/vs_10"/>
+                    <TextView
+                        android:textSize="@dimen/ts_20"
+                        android:textColor="@color/color_CCFFFFFF"
+                        android:ellipsize="end"
+                        android:id="@+id/tvType"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/vs_10"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:layout_marginEnd="@dimen/vs_10"/>
+                </LinearLayout>
+                <TextView
+                    android:textSize="@dimen/ts_20"
+                    android:textColor="@color/color_CCFFFFFF"
+                    android:ellipsize="end"
+                    android:id="@+id/tvActor"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/vs_5"
+                    android:singleLine="true"/>
+                <TextView
+                    android:textSize="@dimen/ts_20"
+                    android:textColor="@color/color_CCFFFFFF"
+                    android:ellipsize="end"
+                    android:id="@+id/tvDirector"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/vs_5"
+                    android:singleLine="true"/>
+                <TextView
+                    android:textSize="@dimen/ts_20"
+                    android:textColor="@color/color_CCFFFFFF"
+                    android:ellipsize="end"
+                    android:id="@+id/tvPlayUrl"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"/>
+                <TextView
+                    android:textSize="@dimen/ts_20"
+                    android:textColor="@color/color_CCFFFFFF"
+                    android:ellipsize="end"
+                    android:id="@+id/tvDes"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="3"
+                    android:lineSpacingMultiplier="1.2"/>
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="0.0mm"
+                    android:layout_weight="1.0"/>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textSize="@dimen/vs_20"
+                        android:textColor="@android:color/white"
+                        android:gravity="center"
+                        android:id="@+id/tvPlay"
+                        android:background="@drawable/button_detail_play"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_120"
+                        android:layout_height="@dimen/vs_40"
+						android:layout_marginLeft="@dimen/vs_10"
+						android:layout_marginStart="@dimen/vs_10"
+                        android:layout_marginRight="@dimen/vs_10"
+						android:layout_marginTop="@dimen/vs_10"
+						android:layout_marginBottom="@dimen/vs_10" 
+                        android:text="立即播放"
+                        android:layout_marginEnd="@dimen/vs_10"/>
+                    <TextView
+                        android:textSize="@dimen/vs_20"
+                        android:textColor="@android:color/white"
+                        android:gravity="center"
+                        android:id="@+id/tvQuickSearch"
+                        android:background="@drawable/button_detail_quick_search"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_120"
+                        android:layout_height="@dimen/vs_40"
+						android:layout_marginTop="@dimen/vs_10"
+						android:layout_marginBottom="@dimen/vs_10" 
+                        android:layout_marginRight="@dimen/vs_10"
+                        android:text="快速搜索"
+                        android:layout_marginEnd="@dimen/vs_10"/>
+                    <TextView
+                        android:textSize="@dimen/vs_20"
+                        android:textColor="@android:color/white"
+                        android:gravity="center"
+                        android:id="@+id/tvSort"
+                        android:background="@drawable/button_detail_sort"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_120"
+                        android:layout_height="@dimen/vs_40"
+						android:layout_marginTop="@dimen/vs_10"
+						android:layout_marginBottom="@dimen/vs_10" 
+                        android:layout_marginRight="@dimen/vs_10"
+                        android:text="倒序"
+                        android:layout_marginEnd="@dimen/vs_10"/>
+                    <TextView
+                        android:textSize="@dimen/vs_20"
+                        android:textColor="@android:color/white"
+                        android:gravity="center"
+                        android:id="@+id/tvCollect"
+                        android:background="@drawable/button_detail_collect"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_120"
+                        android:layout_height="@dimen/vs_40"
+						android:layout_marginTop="@dimen/vs_10"
+						android:layout_marginBottom="@dimen/vs_10" 
+                        android:layout_marginRight="@dimen/vs_10"
+                        android:layout_marginEnd="@dimen/vs_10"
+                        android:text="加入收藏"/>
+                    <TextView
+                        android:textSize="@dimen/vs_20"
+                        android:textColor="@android:color/white"
+                        android:gravity="center"
+                        android:id="@+id/tvDesc"
+                        android:background="@drawable/button_detail_desc"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_120"
+                        android:layout_height="@dimen/vs_40"
+						android:layout_marginTop="@dimen/vs_10"
+						android:layout_marginBottom="@dimen/vs_10" 
+                        android:layout_marginRight="@dimen/vs_10"
+                        android:layout_marginEnd="@dimen/vs_10"
+                        android:text="内容简介"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:gravity="center_horizontal"
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:id="@+id/mEmptyPlaylist"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="@dimen/vs_128"
+                android:layout_height="@dimen/vs_128"
+                android:src="@drawable/icon_empty"/>
+            <TextView
+                android:textSize="@dimen/ts_24"
+                android:textColor="@android:color/white"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/vs_10"
+                android:text="暂无播放数据"
+                android:layout_marginStart="@dimen/vs_10"/>
+        </LinearLayout>
+        <com.owen.tvrecyclerview.widget.TvRecyclerView
+            android:id="@+id/mGridViewFlag"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/vs_45"
+            android:layout_marginLeft="@dimen/vs_50"
+            android:layout_marginTop="@dimen/vs_0"
+            android:layout_marginRight="@dimen/vs_50"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
+            app:tv_selectedItemIsCentered="true"/>
+        <com.owen.tvrecyclerview.widget.TvRecyclerView
+            android:id="@+id/mSeriesGroupView"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/vs_45"
+            android:layout_marginLeft="@dimen/vs_50"
+            android:layout_marginTop="@dimen/vs_10"
+            android:layout_marginRight="@dimen/vs_50"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
+            app:tv_selectedItemIsCentered="true"/>
+        <com.owen.tvrecyclerview.widget.TvRecyclerView
+            android:id="@+id/mGridView"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="@dimen/vs_50"
+            android:layout_marginTop="@dimen/vs_10"
+            android:layout_marginRight="@dimen/vs_50"
+            android:layout_marginBottom="@dimen/vs_10"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
+            app:tv_selectedItemIsCentered="true"
+            app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
+    </LinearLayout>
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/previewPlayer"
+        android:visibility="gone"
+        android:layout_width="@dimen/vs_470"
+        android:layout_height="@dimen/vs_300"
+        android:layout_marginLeft="@dimen/vs_50"
+        android:layout_marginTop="@dimen/vs_20"
+        android:layout_marginBottom="@dimen/vs_10"
+        android:layout_marginStart="@dimen/vs_50"/>
+    <View
+        android:id="@+id/previewPlayerBlock"
+        android:background="@drawable/preview_player_block"
+        android:focusable="true"
+        android:visibility="gone"
+        android:layout_width="@dimen/vs_470"
+        android:layout_height="@dimen/vs_300"
+        android:layout_marginLeft="@dimen/vs_50"
+        android:layout_marginTop="@dimen/vs_20"
+        android:layout_marginBottom="@dimen/vs_10"
+        android:layout_marginStart="@dimen/vs_50"/>
+</FrameLayout>
