--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,10 +20,11 @@
             android:layout_marginTop="@dimen/vs_10">
             <ImageView
                 android:id="@+id/ivThumb"
+                android:layout_gravity="center_vertical"
                 android:layout_width="@dimen/vs_240"
-                android:layout_height="306.0mm"
+                android:layout_height="302.0mm"
                 android:layout_marginLeft="11.0mm"
-                android:layout_marginTop="@dimen/vs_3"
+                android:layout_marginBottom="@dimen/vs_0"
                 android:scaleType="fitXY"/>
             <View
                 android:id="@+id/previewPlayerPlace"
@@ -43,6 +44,7 @@
                     android:id="@+id/tvName"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/vs_5"
                     android:layout_marginBottom="@dimen/vs_5"
                     android:maxLines="1"
                     android:singleLine="true"/>
@@ -130,6 +132,7 @@
                     android:textColor="@color/color_CCFFFFFF"
                     android:ellipsize="end"
                     android:id="@+id/tvPlayUrl"
+                    android:layout_marginBottom="@dimen/vs_5"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:singleLine="true"/>
@@ -288,10 +291,9 @@
         android:id="@+id/previewPlayer"
         android:visibility="gone"
         android:layout_width="@dimen/vs_470"
-        android:layout_height="305mm"
-        android:paddingLeft="2mm"
+        android:layout_height="@dimen/vs_300"
         android:layout_marginLeft="@dimen/vs_50"
-        android:layout_marginTop="@dimen/vs_14"
+        android:layout_marginTop="@dimen/vs_20"
         android:layout_marginBottom="@dimen/vs_10"
         android:layout_marginStart="@dimen/vs_50"/>
     <View
@@ -300,10 +302,9 @@
         android:focusable="true"
         android:visibility="gone"
         android:layout_width="@dimen/vs_470"
-        android:layout_height="305mm"
+        android:layout_height="@dimen/vs_300"
         android:layout_marginLeft="@dimen/vs_50"
-        android:paddingLeft="2mm"
-        android:layout_marginTop="@dimen/vs_14"
+        android:layout_marginTop="@dimen/vs_20"
         android:layout_marginBottom="@dimen/vs_10"
         android:layout_marginStart="@dimen/vs_50"/>
 </FrameLayout>
