--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -398,7 +398,7 @@
                 android:layout_marginLeft="0.0dip"
                 android:layout_marginTop="@dimen/vs_0"
                 android:layout_marginRight="0.0dip"
-                android:text="CCTV 高清"
+                android:text="密码频道"
                 android:singleLine="true"
                 android:layout_alignParentBottom="true"/>
         </LinearLayout>
@@ -435,7 +435,7 @@
                 android:clipToPadding="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="暂无信息"
+                android:text="请输入当前频道密码，聚汇直播欢迎您的观看！"
                 android:singleLine="true"
                 android:shadowColor="#cc000000"
                 android:shadowDx="5.0"
@@ -540,7 +540,7 @@
                 android:clipToPadding="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="暂无信息"
+                android:text="许大师开发制作，请勿商用以及播放违法内容！"
                 android:singleLine="true"
                 android:shadowColor="#cc000000"
                 android:shadowDx="5.0"
@@ -654,7 +654,7 @@
                     android:paddingBottom="5.0mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="测试频道"
+                    android:text="密码频道"
                     android:singleLine="true"
                     android:layout_toRightOf="@+id/iv_circle_bg"
                     android:marqueeRepeatLimit="marquee_forever"/>
