--- a/app/src/main/res/drawable/shape_user_focus.xml
+++ b/app/src/main/res/drawable/shape_user_focus.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true">
+    <item android:state_focused="true" android:state_pressed="true">
         <shape>
-            <corners android:radius="10.0mm"/>
             <stroke
                 android:width="2.0mm"
                 android:color="@color/color_FFFFFF"/>
-            <solid android:color="@color/color_6C3D3D3D"/>
+            <corners android:radius="@dimen/vs_10" />
+            <solid android:color="@color/color_6C3D3D3D" />
         </shape>
     </item>
-    <item android:state_focused="false">
+    <item android:state_focused="false" android:state_pressed="true">
         <shape>
-            <corners android:radius="10.0mm"/>
+            <stroke
+                android:width="2.0mm"
+                android:color="@color/color_FFFFFF"/>
+            <corners android:radius="@dimen/vs_10" />
+            <solid android:color="@color/color_6C3D3D3D" />
+        </shape>
+    </item>
+    <item android:state_focused="true">
+        <shape>
+            <stroke
+                android:width="2.0mm"
+                android:color="@color/color_FFFFFF"/>
+            <corners android:radius="@dimen/vs_10" />
+            <solid android:color="@color/color_6C3D3D3D" />
+        </shape>
+    </item>
+    <item android:state_focused="false" android:state_pressed="false">
+        <shape>
+            <corners android:radius="@dimen/vs_10" />
             <solid android:color="@color/color_6C3D3D3D"/>
         </shape>
     </item>
