--- a/app/src/main/res/layout/item_search_subtitle_result.xml
+++ b/app/src/main/res/layout/item_search_subtitle_result.xml
@@ -1,43 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<FrameLayout
     android:background="@drawable/button_dialog_main"
-    android:focusable="true">
-
+    android:focusable="true"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/vs_50"
-        android:layout_marginBottom="@dimen/vs_10"
-        android:background="@drawable/shape_setting_sort_focus"
-        android:focusable="true"
-        android:singleLine="true"
-        android:maxLines="1"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        android:background="@drawable/shape_setting_sort_focus"
         android:paddingLeft="@dimen/vs_20"
         android:paddingRight="@dimen/vs_20"
-        android:visibility="visible">
-
+        android:focusable="true"
+        android:visibility="visible"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/vs_50"
+        android:layout_marginBottom="@dimen/vs_0"
+        android:maxLines="1"
+        android:singleLine="true">
         <TextView
+            android:textSize="@dimen/ts_22"
+            android:textColor="@android:color/white"
             android:id="@+id/subtitleName"
             android:layout_width="@dimen/vs_960"
             android:layout_height="wrap_content"
-            android:layout_weight="0.8"
-            android:singleLine="true"
-            android:maxLines="1"
             android:text="字幕搜索结果"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/ts_22" />
+            android:maxLines="1"
+            android:singleLine="true"
+            android:layout_weight="0.8"/>
         <TextView
+            android:textSize="@dimen/ts_22"
+            android:textColor="@android:color/white"
             android:id="@+id/subtitleNameInfo"
             android:layout_width="@dimen/vs_80"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:maxLines="1"
             android:text="压缩包"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/ts_22" />
-
+            android:maxLines="1"
+            android:singleLine="true"/>
     </LinearLayout>
 </FrameLayout>
