--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -25,6 +25,8 @@
                 android:layout_height="302.0mm"
                 android:layout_marginLeft="11.0mm"
                 android:layout_marginBottom="@dimen/vs_0"
+                android:clickable="true"
+                android:focusable="false"
                 android:scaleType="fitXY"/>
             <View
                 android:id="@+id/previewPlayerPlace"
@@ -174,7 +176,7 @@
                         android:textColor="@android:color/white"
                         android:gravity="center"
                         android:id="@+id/tvQuickSearch"
-                        android:background="@drawable/button_detail_quick_search"
+                        android:background="@drawable/button_detail_quick_search_1"
                         android:focusable="true"
                         android:layout_width="@dimen/vs_120"
                         android:layout_height="@dimen/vs_40"
