--- a/app/src/main/res/drawable/shape_setting_model_focus.xml
+++ b/app/src/main/res/drawable/shape_setting_model_focus.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true">
+    <item android:state_focused="true" android:state_pressed="true">
         <shape>
-            <corners android:radius="@dimen/vs_5"/>
-            <solid android:color="@color/color_6C3D3D3D"/>
+            <corners android:radius="@dimen/vs_5" />
+            <solid android:color="@color/color_6C3D3D3D" />
             <stroke
                 android:width="@dimen/vs_2"
                 android:color="@android:color/white"/>
         </shape>
     </item>
-    <item android:state_focused="false">
+    <item android:state_focused="false" android:state_pressed="true">
+        <shape>
+            <corners android:radius="@dimen/vs_5" />
+            <solid android:color="@color/color_6C3D3D3D" />
+            <stroke
+                android:width="@dimen/vs_2"
+                android:color="@android:color/white"/>
+        </shape>
+    </item>
+    <item android:state_focused="true">
+        <shape>
+            <corners android:radius="@dimen/vs_5" />
+            <solid android:color="@color/color_6C3D3D3D" />
+            <stroke
+                android:width="@dimen/vs_2"
+                android:color="@android:color/white"/>
+        </shape>
+    </item>
+    <item android:state_focused="false" android:state_pressed="false">
         <shape>
             <corners android:radius="@dimen/vs_5"/>
             <solid android:color="@color/color_6C3D3D3D"/>
