--- a/app/src/main/res/drawable/shape_setting_sort_focus.xml
+++ b/app/src/main/res/drawable/shape_setting_sort_focus.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true">
+    <item android:state_focused="true" android:state_pressed="true">
         <shape>
-            <corners android:radius="5mm" />
-            <stroke android:width="2mm" android:color="@android:color/white" />
+            <corners android:radius="@dimen/vs_5" />
+            <solid android:color="@color/color_1890FF" />
         </shape>
     </item>
-    <item android:state_focused="false">
+    <item android:state_focused="false" android:state_pressed="true">
         <shape>
+            <corners android:radius="@dimen/vs_5" />
+            <solid android:color="@color/color_1890FF" />
+        </shape>
+    </item>
+    <item android:state_focused="true">
+        <shape>
+            <corners android:radius="@dimen/vs_5" />
+            <solid android:color="@color/color_1890FF" />
+        </shape>
+    </item>
+    <item android:state_focused="false" android:state_pressed="false">
+        <shape>
+            <corners android:radius="@dimen/vs_5"/>
             <solid android:color="@android:color/transparent" />
         </shape>
     </item>
