--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -162,7 +162,7 @@
                         android:id="@+id/tvPlay"
                         android:background="@drawable/button_detail_play"
                         android:focusable="true"
-                        android:layout_width="@dimen/vs_120"
+                        android:layout_width="@dimen/vs_100"
                         android:layout_height="@dimen/vs_40"
                         android:layout_marginLeft="@dimen/vs_10"
                         android:layout_marginTop="@dimen/vs_10"
@@ -178,7 +178,7 @@
                         android:id="@+id/tvQuickSearch"
                         android:background="@drawable/button_detail_quick_search_1"
                         android:focusable="true"
-                        android:layout_width="@dimen/vs_120"
+                        android:layout_width="@dimen/vs_100"
                         android:layout_height="@dimen/vs_40"
                         android:layout_marginTop="@dimen/vs_10"
                         android:layout_marginRight="@dimen/vs_10"
@@ -192,7 +192,7 @@
                         android:id="@+id/tvSort"
                         android:background="@drawable/button_detail_sort"
                         android:focusable="true"
-                        android:layout_width="@dimen/vs_120"
+                        android:layout_width="@dimen/vs_100"
                         android:layout_height="@dimen/vs_40"
                         android:layout_marginTop="@dimen/vs_10"
                         android:layout_marginRight="@dimen/vs_10"
@@ -206,7 +206,7 @@
                         android:id="@+id/tvCollect"
                         android:background="@drawable/button_detail_collect"
                         android:focusable="true"
-                        android:layout_width="@dimen/vs_120"
+                        android:layout_width="@dimen/vs_100"
                         android:layout_height="@dimen/vs_40"
                         android:layout_marginTop="@dimen/vs_10"
                         android:layout_marginRight="@dimen/vs_10"
@@ -220,13 +220,28 @@
                         android:id="@+id/tvDesc"
                         android:background="@drawable/button_detail_desc"
                         android:focusable="true"
-                        android:layout_width="@dimen/vs_120"
+                        android:layout_width="@dimen/vs_100"
                         android:layout_height="@dimen/vs_40"
                         android:layout_marginTop="@dimen/vs_10"
                         android:layout_marginRight="@dimen/vs_10"
                         android:layout_marginBottom="@dimen/vs_10"
                         android:text="内容简介"
                         android:layout_marginEnd="@dimen/vs_10"/>
+                    <TextView
+                        android:id="@+id/tvPush"
+                        android:layout_width="@dimen/vs_100"
+                        android:layout_height="@dimen/vs_40"
+                        android:layout_marginEnd="@dimen/vs_10"
+						android:layout_marginTop="@dimen/vs_10"
+						android:layout_marginBottom="@dimen/vs_10"
+                        android:layout_marginRight="@dimen/vs_10"
+                        android:background="@drawable/button_detail_desc"
+                        android:focusable="true"
+                        android:gravity="center"
+                        android:text="远程推送"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/vs_20" />
+
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
