--- a/app/src/main/res/layout/dialog_search_subtitle.xml
+++ b/app/src/main/res/layout/dialog_search_subtitle.xml
@@ -17,9 +17,9 @@
             android:layout_height="wrap_content">
             <EditText
                 android:textSize="@dimen/ts_26"
-                android:textColor="@color/color_85000000"
-                android:textColorHint="@color/color_80000000"
-                android:id="@+id/input"
+                android:textColor="@color/color_80000000"
+                android:textColorHint="@color/color_6C3D3D3D"
+                android:id="@id/input"
                 android:background="@drawable/input_search_1"
                 android:paddingLeft="@dimen/vs_20"
                 android:paddingTop="@dimen/vs_10"
@@ -36,7 +36,7 @@
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:id="@+id/inputSubmit"
+                android:id="@id/inputSubmit"
                 android:background="@drawable/button_dialog_main"
                 android:padding="@dimen/vs_10"
                 android:focusable="true"
@@ -63,7 +63,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
                 <com.owen.tvrecyclerview.widget.TvRecyclerView
-                    android:id="@+id/mGridView"
+                    android:id="@id/mGridView"
                     android:clipChildren="false"
                     android:clipToPadding="false"
                     android:layout_width="fill_parent"
@@ -75,7 +75,7 @@
         </ScrollView>
         <ProgressBar
             android:layout_gravity="center"
-            android:id="@+id/loadingBar"
+            android:id="@id/loadingBar"
             android:visibility="gone"
             android:layout_width="@dimen/vs_50"
             android:layout_height="@dimen/vs_50"
