--- a/app/src/main/res/layout/dialog_push.xml
+++ b/app/src/main/res/layout/dialog_push.xml
@@ -34,7 +34,7 @@
                 android:textColor="@color/color_80000000"
                 android:textColorHint="@color/color_6C3D3D3D"
                 android:gravity="center"
-                android:id="@id/etAddr"
+                android:id="@+id/etAddr"
                 android:background="@drawable/input_search_1"
                 android:paddingLeft="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_10"
@@ -62,11 +62,11 @@
                 android:textColorHint="@color/color_6C3D3D3D"
                 android:gravity="center"
                 android:layout_gravity="end|center"
-                android:id="@id/etPort"
+                android:id="@+id/etPort"
                 android:background="@drawable/input_search_1"
                 android:paddingLeft="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_10"
-                android:nextFocusDown="@id/btnConfirm"
+                android:nextFocusDown="@+id/btnConfirm"
                 android:layout_width="@dimen/vs_70"
                 android:layout_height="@dimen/vs_50"
                 android:hint="端口"
@@ -95,7 +95,7 @@
                 android:textColor="@color/color_80000000"
                 android:textColorHint="@color/color_6C3D3D3D"
                 android:gravity="center"
-                android:id="@id/etCurrent"
+                android:id="@+id/etCurrent"
                 android:paddingLeft="@dimen/vs_20"
                 android:paddingRight="@dimen/vs_40"
                 android:focusable="false"
@@ -123,10 +123,10 @@
                 android:textColorHint="@color/color_6C3D3D3D"
                 android:gravity="center"
                 android:layout_gravity="end|center"
-                android:id="@id/btnConfirm"
+                android:id="@+id/btnConfirm"
                 android:background="@drawable/button_dialog_main"
                 android:focusable="true"
-                android:nextFocusDown="@id/btnConfirm"
+                android:nextFocusDown="@+id/btnConfirm"
                 android:clickable="true"
                 android:paddingLeft="13mm"
                 android:paddingRight="13mm"
@@ -139,7 +139,7 @@
                 android:textSize="@dimen/vs_20"
                 android:textColor="@android:color/white"
                 android:gravity="center"
-                android:id="@id/btnCancel"
+                android:id="@+id/btnCancel"
                 android:background="@drawable/button_dialog_main"
                 android:padding="@dimen/vs_10"
                 android:focusable="true"
