--- a/app/src/main/res/drawable/input_search_1.xml
+++ b/app/src/main/res/drawable/input_search_1.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners
-        android:radius="10.0mm" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="5.0mm"/>
     <stroke
         android:width="@dimen/vs_2"
-        android:color="@color/color_80000000" />
+        android:color="@color/color_80000000"/>
 </shape>
