--- a/app/src/main/res/layout/dialog_search_subtitle.xml
+++ b/app/src/main/res/layout/dialog_search_subtitle.xml
@@ -38,7 +38,7 @@
                 android:layout_gravity="center"
                 android:id="@+id/inputSubmit"
                 android:background="@drawable/button_dialog_main"
-                android:padding="@dimen/vs_10"
+                android:padding="11mm"
                 android:focusable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
