--- a/app/src/main/res/layout/dialog_push.xml
+++ b/app/src/main/res/layout/dialog_push.xml
@@ -41,6 +41,7 @@
                 android:layout_width="@dimen/vs_200"
                 android:layout_height="@dimen/vs_50"
                 android:hint="推送 IP 地址"
+                android:maxLength="15"
                 android:maxLines="1"
                 android:layout_weight="1.0"
                 android:inputType="text"/>
@@ -67,12 +68,14 @@
                 android:paddingLeft="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_10"
                 android:nextFocusDown="@+id/btnConfirm"
-                android:layout_width="@dimen/vs_70"
+                android:maxWidth="@dimen/vs_70"
+                android:minWidth="@dimen/vs_70"
                 android:layout_height="@dimen/vs_50"
                 android:hint="端口"
                 android:maxLines="1"
+                android:maxLength="5"
                 android:layout_weight="1.0"
-                android:inputType="text"/>
+                android:inputType="number"/>
         </TableRow>
         <TableRow
             android:layout_width="fill_parent"
@@ -96,8 +99,8 @@
                 android:textColorHint="@color/color_6C3D3D3D"
                 android:gravity="center"
                 android:id="@+id/etCurrent"
-                android:paddingLeft="@dimen/vs_20"
-                android:paddingRight="@dimen/vs_40"
+                android:paddingLeft="@dimen/vs_0"
+                android:paddingRight="@dimen/vs_20"
                 android:focusable="false"
                 android:clickable="false"
                 android:layout_width="@dimen/vs_200"
@@ -130,7 +133,8 @@
                 android:clickable="true"
                 android:paddingLeft="13mm"
                 android:paddingRight="13mm"
-                android:layout_width="@dimen/vs_80"
+                android:maxWidth="@dimen/vs_76"
+                android:minWidth="@dimen/vs_76"
                 android:layout_height="@dimen/vs_50"
                 android:text="推送"
                 android:maxLines="1"
