--- a/app/src/main/res/layout/dialog_desc.xml
+++ b/app/src/main/res/layout/dialog_desc.xml
@@ -9,6 +9,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
+        android:layout_marginTop="@dimen/vs_100"
+        android:layout_marginBottom="@dimen/vs_100"
         xmlns:android="http://schemas.android.com/apk/res/android">
         <TextView
             android:textSize="@dimen/ts_26"
