--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/vs_10"
             android:layout_marginBottom="@dimen/vs_10"
-            android:paddingLeft="@dimen/vs_50"
+            android:paddingLeft="53mm"
             android:paddingRight="@dimen/vs_50"
             app:tv_selectedItemIsCentered="true" />
 
